5.1.4 -> 5.1.5:
    - jbj: remove internal zlib.
    - jbj: WR: add %windriver target to devtool.conf.
    - jbj: WR: eliminate most compiler warnings.
    - jbj: WR: eliminate duplicated AutoFu boilerplate, use system.h instead.
    - jbj: WR: eliminate getdate.[ch], use same from rpmio instead.
    - jbj: WR: eliminate dueling AutoFu defines from shadow_config.h, use RPM's
        config.h (through system.h) instead.
    - jbj: WR: eliminate xmalloc.c, use system.h defines instead.
    - jbj: WR: rename config.h to shadow_config.h, include "system.h" instead.
    - jbj: WR: rely on PATH to find pkg-config.
    - jbj: WR: don't spew error messages with internal lua shadow module.
    - jbj: WR: add shadow/chkconfig internal lua modules.
    - jbj: WR: Color/arch affinity while upgrading on multilib platforms.
    - jbj: WR: Permit configurable arch strings.
    - jbj: WR: Use %{_host_vendor} and %{_host_os} for platform.
    - jbj: WR: fakeroot maps devices to files. avoid /dev/* in checkfiles.
    - jbj: db_tool: remove gcc whinings.
    - at: gzdio: fixed and re-enabled rsyncable_gzwrite()
    - rse: fix building under --with-lzma by providing the necessary 64-bit defines for inclusion of <lzma.h>
    - jbj: gzdio: quadruple check with external -lz. still no fix => disabled.
    - jbj: gzdio: integrate the cpio tracking patch (needs to be done elsewhere)
    - jbj: gzdio: disable rsync flushing until a fix can be attempted.
    - jbj: gzdio: remove c99'ism.
    - jbj: QNX: use strtouq() instead of strtoul() in rpmmtree.
    - jbj: QNX: retrofit asprintf.h (from XAR) for the deprived. rpmmtree uses
        (rewrite to eliminate asprintf is an alternative).
    - jbj: QNX: supply missing typedef's for uint32_t.
    - at: gzdio: return partial "best effort" bytes written with gzfoo errors.
    - at: gzdio: do gzflush only after RSYNC_WIN boundaries.
    - at: gzdio: push gzFile into a private container.
    - jbj: make gzdio.c standalone.